Version 0.9:
 - Unlimited quota (0B) implemented
 - Scrambler plugin supported
 - Host selection implemented