@@ -175,6 +175,9 @@
    </item>
    <item row="7" column="1">
     <widget class="QListWidget" name="fldForward">
+     <property name="whatsThis">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Über diese Feld können die einzelnen Weiterleitungen eingestellt werden. Eine E-Mail die an dieses Konto gesendet wird, wird an alle die in dieser Liste eingetragenen Adressen weitergeleitet. Es besteht kein Limit.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
      <property name="editTriggers">
       <set>QAbstractItemView::AllEditTriggers</set>
      </property>
@@ -344,6 +347,9 @@
    </item>
    <item row="12" column="1">
     <widget class="QPlainTextEdit" name="labEncWarning">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="font">
       <font>
        <weight>75</weight>
@@ -353,6 +359,9 @@
      <property name="styleSheet">
       <string notr="true">color: rgb(184, 0, 0);
 background-color: transparent;</string>
+     </property>
+     <property name="inputMethodHints">
+      <set>Qt::ImhMultiLine</set>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Plain</enum>
